# amianapi

./: .gitignore  README.md  main.py  pyproject.toml
sources/: environment.py
sources/server/: inventories.py  project.py  projects.py  route_inventory.py  router.py  routes_inventory.py  server.py  threaded_httpd.py
sources/tui/: app.py  ids.py  liveedit.css  routes_list.py
sources/tui/project/: new_project.py  resume.py
